--- a/ECG_Class.ipynb
+++ b/ECG_Class.ipynb
@@ -282,67 +282,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '/home/tanis/repos/ECG_Deep/'\n",
+    "tfms = get_transforms(do_flip=False)\n",
+    "data = ImageDataBunch.from_folder(path, ds_tfms=tfms, size=224)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<fastai.vision.data.ImageDataBunch at 0x7f1375c8b828>"
+       "<fastai.vision.data.ImageDataBunch at 0x7f135f80ea20>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path = '/home/tanis/repos/ECG_Deep/'\n",
-    "tfms = get_transforms(do_flip=False)\n",
-    "data = ImageDataBunch.from_folder(path, ds_tfms=tfms, size=224)\n",
     "data.normalize(mnist_stats)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/tanis/repos/ECG_Deep/'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.show_batch(rows=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -358,23 +338,43 @@
        "(5, 5)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(data.classes)\n",
+    "print(data.c)\n",
     "len(data.classes),data.c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "learn = create_cnn(data, models.resnet34, metrics=error_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0.15, 0.15, 0.15], [0.15, 0.15, 0.15])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.stats"
    ]
   },
   {
